# ai-assistant

./: .env.example  .env.test  .gitignore  README.md
.github/: copilot-instructions.md
apps/api/: Dockerfile  assistant.db  pyproject.toml
apps/api/ai_assistant_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/app/: automation.py  config.py  db.py  llm.py  main.py  models.py  repositories.py  schemas.py  search.py  tasks.py
apps/api/app/graph/: __init__.py  nodes.py  state.py  workflow.py
apps/api/app/mcp/: __init__.py  client.py  registry.py
apps/api/app/skills/: __init__.py  base.py  registry.py
apps/api/app/skills/browser/: __init__.py  descriptor.py  implementation.py
apps/api/app/skills/calendar/: __init__.py  descriptor.py  implementation.py
apps/api/app/skills/macos/: __init__.py  descriptor.py  implementation.py
apps/api/app/skills/mail/: __init__.py  descriptor.py  implementation.py
apps/api/app/skills/note/: __init__.py  descriptor.py  implementation.py
apps/api/app/skills/search/: __init__.py  descriptor.py  implementation.py
apps/api/app/tests/: test_automation.py  test_graph.py  test_session_resolution.py  test_skills.py
apps/api/tests/: test_skill_runtime.py
apps/browser-runner/: Dockerfile  pyproject.toml
apps/browser-runner/ai_assistant_browser_runner.egg-info/: PKG-INFO  SOURCES.txt
apps/browser-runner/runner/: main.py
apps/macos-mcp-server/: pyproject.toml  server.py
apps/workers/: Dockerfile  pyproject.toml
apps/workers/ai_assistant_worker.egg-info/: PKG-INFO  SOURCES.txt
apps/workers/worker/: macos_runner.py  main.py
docs/: architecture.md  automation-skill-first-architecture.md  gmail-integration.md  google-calendar-integration.md  implementation-plan.md  kakao-integration.md  llama-cpp-operations.md  macos-automation.md  mail-skill-first-architecture.md  mlx-operations.md  plugin-and-skill-architecture.md  remote-access.md  service-operations.md  slack-integration.md  user-identity-memory-guide.md
docs/quality-and-scalability/: 2026-03-21-system-validation-and-scalability-plan.md  2026-03-21-webui-response-format-guidelines.md  2026-03-22-gmail-search-llm-n8n-improvement-review.md  (+1 more)
(+50 files in other folders)
