[project]
name = "ai-assistant-api"
version = "0.1.0"
description = "AI Assistant FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
