[project]
name = "ai-assistant-worker"
version = "0.1.0"
description = "AI Assistant background worker"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"pydantic>=2.10.0",
	"uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
